<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    tools:context="com.example.bublovskiy.moveaview.MainActivity"
    android:background="@color/mainLayoutBackgroundColor"
    android:id="@+id/mainLayout">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainViewBackgroundColor"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/exitTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bigSignGameOver"
        android:visibility="gone"
        android:id="@+id/textViewGameOver"
        android:textSize="@dimen/gameOverText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:layout_width="@dimen/targetImageViewDim"
        android:layout_height="@dimen/targetImageViewDim"
        android:id="@+id/targetImageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/target1"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/exitText"
        android:id="@+id/exitTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/exitAndNewText"
        android:onClick="endTheGame"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/newText"
        android:id="@+id/newTextView"
        android:layout_below="@+id/surfaceView"
        android:layout_alignParentEnd="true"
        android:onClick="startNewGame"
        android:textSize="@dimen/exitAndNewText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/scoreText"
        android:id="@+id/scoreTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/exitAndNewText"/>

    <!--Add Ad banner space-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adBanner"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:visibility="gone"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_main"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
